@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class Player{
- balance : int
- turnOrderId : int
+ getTurnOrderId() : int
+ setTurnOrderId() : void
+ getBalance() : int
+ changeBalance() : int
}
class Gamecontroller{
- currentDiceroll: int
- Player
- Die
+ startGameLoop() : void
- printScore() : void
- evaluateGameProgress() : void
-printWinnerAndExit() : void
-printFieldDescription() : void
-updatePlayerBalance() : void
-requestInputToStart() : void
-updateCurrentPlayer() : void
-rollDiceAndPrint() : void
}
class Game{
- Player
- Die
+ run()
}
class Die{
- MAX : int
- faceValue : int
+getFacevalue() : int
+roll() : int
+toString() : String
}
class Board{
{static}+ getFieldDescription() : String
{static}+ getFieldName() : String
{static}+ getBalanceChange() : int
}
class Main{
+ main()
}
class GUI{
+setFieldInformation() : void
+displayDieRoll() : void
+displayPlayerBalance() : void
+addPlayerToBoard() : void
+moveCarToField() : void
+displayWinner() : void

}

Die "2"--"1" Game : containes
Gamecontroller "1"--"1" Game : evaluates
Gamecontroller "1"--"1" Board : evaluates
Game "1"--"1" Main : runs
Player "2"--"1" Game : containes
GUI"1" -- "1"Gamecontroller : sendsInformation




@enduml